Existing content tweaks and new RN work

--- a/Content/Topics/Views/Schedule Data Mapping.htm
+++ b/Content/Topics/Views/Schedule Data Mapping.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Schedule data mapping</h1>
-        <p>The schedule data mapping section determines how the data returned in the schedule data selection method is used. </p>
+        <p>The <span class="Emphasis">Schedule Data Mapping</span> tab determines how the data returned in the schedule data selection method is used. </p>
         <ul>
             <li><span class="Emphasis">ID</span> – Identification number for the schedule data object. </li>
             <li><span class="Emphasis">Name</span> – Name for the schedule data object. </li>
