--- a/Content/Topics/Views/Schedule Properties.htm
+++ b/Content/Topics/Views/Schedule Properties.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Schedule properties</h1>
-        <p>The schedule properties define the layout of the schedule and how users are allowed to interact with it. </p>
+        <p>The <span class="Emphasis">Schedule Properties</span> tab defines the layout of the schedule and how users are allowed to interact with it. </p>
         <ul>
             <li><span class="Emphasis">Resource Name Caption</span> – Name given to the schedule. </li>
             <li><span class="Emphasis">Resource Tree Visibility</span> – If selected, the resource tree is visible.  </li>
