--- a/Content/Topics/Views/Single column properties.htm
+++ b/Content/Topics/Views/Single column properties.htm
@@ -4,7 +4,7 @@
     </head>
     <body>
         <h1>Column properties</h1>
-        <p>The column properties section lets users add, modify, and delete columns as needed within the grid. </p>
+        <p>The <span class="Emphasis">Column Properties</span> tab lets users add, modify, and delete columns as needed within the grid. </p>
         <h2>Column</h2>
         <ul>
             <li><span class="Emphasis">Column</span> – The column name.</li>
