--- a/Content/Topics/Views/Schedule Tree Data Mapping.htm
+++ b/Content/Topics/Views/Schedule Tree Data Mapping.htm
@@ -4,11 +4,11 @@
     </head>
     <body>
         <h1>Schedule tree data mapping</h1>
-        <p>The schedule tree data mapping section determines how the data returned in the schedule tree data selection method is used. </p>
+        <p>The <span class="Emphasis">Schedule Tree Data Mapping</span> tab determines how the data returned in the schedule tree data selection method is used. </p>
         <ul>
             <li><span class="Emphasis">Caption</span> – The label for the entity in the hierarchy tree. The caption needs to be mapped to a field in the stored procedure.  </li>
             <li><span class="Emphasis">Resource ID</span> – Defines the link between the schedule tree and the schedule data. </li>
-            <li><span class="Emphasis">Parent ID</span> – If the schedule tree object is hierarchal in nature, this defines the hierarchal parented relationship. </li>
+            <li><span class="Emphasis">Parent ID</span> – If the schedule tree object is hierarchical in nature, this defines the hierarchical parented relationship. </li>
             <li><span class="Emphasis">Color</span> – Defines the color of the schedule tree object. </li>
             <li><span class="Emphasis">Image</span> – If there is an associated image (icon) within the method, this value goes here (index number).</li>
         </ul>
