TCC RN & Module

--- a/Content/Topics/Views/Accessing Widgets Config Screen.htm
+++ b/Content/Topics/Views/Accessing Widgets Config Screen.htm
@@ -9,7 +9,7 @@
         <h2>To access the Maintain Widgets window</h2>
         <ul>
             <li>
-                <p>From the <span class="Emphasis">System Utilities</span> solution, click the <span class="Emphasis">Views </span>tab, and then <span class="Emphasis">Widgets</span>. </p>
+                <p>From the <span class="Emphasis">System Utilities</span> module, click the <span class="Emphasis">Views </span>tab, and then <span class="Emphasis">Widgets</span>. </p>
                 <p>The <span class="Emphasis">Maintain Widgets</span> window displays.</p>
             </li>
         </ul>
