--- a/Content/Topics/Views/Export Maintenance.htm
+++ b/Content/Topics/Views/Export Maintenance.htm
@@ -1,8 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <html xmlns:MadCap="http://www.madcapsoftware.com/Schemas/MadCap.xsd" xml:lang="en-us">
-    <head>
-        <title>
-        </title>
+    <head><title></title>
     </head>
     <body>
         <h1>Configuring the export of promotions</h1>
@@ -11,7 +9,7 @@
             <img src="../../Resources/Images/Promotion Management/Export Maintenance.png" class="LargeImages" />
         </p>
         <h2>Exportable statuses</h2>
-        <p>When an export will occur is determined using the <span class="Emphasis">Exportable Statuses</span> grid. Only those Promotions and Events with a status that is considered exportable triggers an export. All statuses are dynamically displayed based on the statuses defined in the Workflow solution.</p>
+        <p>When an export will occur is determined using the <span class="Emphasis">Exportable Statuses</span> grid. Only those Promotions and Events with a status that is considered exportable triggers an export. All statuses are dynamically displayed based on the statuses defined in the Workflow module.</p>
         <p>
             <img src="../../Resources/Images/Promotion Management/Exportable Statuses.png" class="LargeImages" />
         </p>
@@ -39,8 +37,7 @@
         <p>Deletions can be made directly to the <span class="Emphasis">Export Definition</span> and <span class="Emphasis">Export Columns</span> grids. Deleting a Export Definition row automatically deletes the associated columns in the <span class="Emphasis">Export Columns</span> grid.</p>
         <h2 MadCap:conditions="General.ScreenOnly">Related topic</h2>
         <ul MadCap:conditions="General.ScreenOnly">
-            <li>
-                <a href="../Promotion Management/Process Flow.htm">Promotion API Export Data Specification</a>
+            <li><a href="../Promotion Management/Process Flow.htm">Promotion API Export Data Specification</a>
             </li>
         </ul>
     </body>
